# test_bank

./: .pre-commit-config.yaml  alembic.ini  main.py  pyproject.toml
conf/: base_urls.py  db.py  settings.py  urls.py
conf/alembic/: README  env.py  script.py.mako
conf/alembic/versions/: 1_add_db.py
src/: models.py  serializers.py  view.py
